--- a/app/src/main/res/layout/item_coupons.xml
+++ b/app/src/main/res/layout/item_coupons.xml
@@ -4,7 +4,7 @@
     android:layout_height="80dp"
     android:orientation="vertical"
     android:id="@+id/liner_coupon"
-    android:layout_marginRight="16dp">
+    android:layout_marginLeft="16dp">
 
     <TextView
         android:id="@+id/tv_free"
