--- a/app/src/main/res/layout/item_product_review.xml
+++ b/app/src/main/res/layout/item_product_review.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp"
     android:layout_marginTop="10dp"
     android:background="@color/background">
@@ -63,16 +64,6 @@
         android:layout_marginStart="10dp"/>
 
     <TextView
-        android:id="@+id/tv_discount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="24,000 đ"
-        android:textColor="@color/red"
-        android:layout_below="@+id/tv_price"
-        android:layout_toEndOf="@+id/img_img"
-        android:layout_marginStart="10dp"/>
-
-    <TextView
         android:id="@+id/tv_all_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -82,11 +73,19 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="10dp"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcv_toping"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_all_price"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/grey_light"
-        android:layout_below="@+id/tv_all_price"
+        android:layout_below="@+id/rcv_toping"
         android:layout_marginTop="10dp"/>
 
     <TextView
@@ -94,7 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="th3 23/11/2032"
-        android:layout_below="@+id/tv_all_price"
+        android:layout_below="@+id/rcv_toping"
         android:layout_alignParentStart="true"
         android:layout_marginTop="20dp"
         android:layout_marginStart="10dp"/>
@@ -103,7 +102,7 @@
         android:id="@+id/btn_review"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_all_price"
+        android:layout_below="@+id/rcv_toping"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="20dp"
         android:text="Đánh giá"/>
