--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -34,11 +34,18 @@
 
     <color name="grey_light">#e4e9f3</color>
     <color name="grey">#aaa</color>
+    <color name="grey_transparent">#C1AAAAAA</color>
+    <color name="grey_transparent2">#45AAAAAA</color>
     <color name="dark_grey">#ff424242</color>
+    <color name="grey_white">#F3F3F3</color>
+    <color name="grey_black">#667070</color>
 
     <color name="background">#202124</color>
     <color name="background1">#aaa/</color>
     <color name="title">#FFFFFF</color>
     <color name="message">#FAFAFA</color>
     <color name="transparent">#00FFFFFF</color>
+
+    <color name="selected_tab_color">#ff464f</color>
+    <color name="unselected_tab_color">#CCCCCC</color>
 </resources>
