--- a/app/src/main/res/layout/fragment_order_detail.xml
+++ b/app/src/main/res/layout/fragment_order_detail.xml
@@ -389,7 +389,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="8dp"
                     android:background="#F3F4F6"
-                    android:layout_marginVertical="16dp"
+                    android:layout_marginBottom="16dp"
                     />
 
                 <androidx.recyclerview.widget.RecyclerView
@@ -429,8 +429,6 @@
                         android:textSize="14dp"
                         android:textStyle="bold" />
                 </LinearLayout>
-
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
