--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,8 +6,7 @@
 
 <!--  <item name="android:windowTranslucentStatus">true</item>-->
 <!--  <item name="android:windowTranslucentNavigation">true</item>-->
-        <item name="android:textColor">#66707A</item>
-
+        <item name="android:textColor">@color/grey_black</item>
 
         <item name="colorPrimary">@color/red_light</item>
         <item name="colorPrimaryVariant">@color/red_light</item>
