--- a/app/src/main/res/layout/item_coupon.xml
+++ b/app/src/main/res/layout/item_coupon.xml
@@ -16,6 +16,8 @@
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:layout_above="@+id/tv_code"
             android:text="Coupon Name" />
 
@@ -35,6 +37,8 @@
             android:textSize="16sp"
             android:drawableStart="@drawable/icon_home_outline"
             android:layout_below="@+id/tv_code"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:text="20/11/2023" />
 
 <!--        <RelativeLayout-->
