--- a/app/src/main/res/layout/fragment_coupons.xml
+++ b/app/src/main/res/layout/fragment_coupons.xml
@@ -32,24 +32,7 @@
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    android:text="Sắp hết hạn"
-                    />
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/rcy_coupon_running_out_of_date"
-                    tools:listitem="@layout/item_coupon"
-                    tools:itemCount="3"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    />
-                <TextView
-                    android:layout_marginVertical="16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:text="khuyến mãi khác"
+                    android:text="khuyến mãi hiện có"
                     />
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
