--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -17,7 +17,7 @@
             <LinearLayout
                 android:layout_marginVertical="16dp"
                 android:layout_width="match_parent"
-                android:layout_height="232dp"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical">
                 <View
@@ -138,30 +138,6 @@
                         android:paddingLeft="10dp"
                         android:text="@string/language"
                         />
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:id="@+id/layout_theme"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginBottom="10dp"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:background="@android:color/transparent"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:src="@drawable/cache" />
-
-                    <androidx.appcompat.widget.SwitchCompat
-                        android:id="@+id/switch_dark_mode"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:paddingLeft="10dp"
-                        android:text="@string/dark_mode" />
                 </LinearLayout>
 
                 <LinearLayout
