--- a/app/src/main/res/layout/item_coupon.xml
+++ b/app/src/main/res/layout/item_coupon.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="124dp"
+    android:layout_marginBottom="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background_border_radius">
     <RelativeLayout
@@ -16,6 +17,8 @@
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:layout_above="@+id/tv_code"
             android:text="Coupon Name" />
 
@@ -33,26 +36,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:drawableStart="@drawable/icon_home_outline"
             android:layout_below="@+id/tv_code"
             android:text="20/11/2023" />
 
-<!--        <RelativeLayout-->
-<!--            android:layout_marginTop="14dp"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal">-->
-<!--            <TextView-->
-<!--                android:id="@+id/btn_used"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:textSize="16sp"-->
-<!--                android:textColor="?attr/colorPrimary"-->
-<!--                android:background="@drawable/background_border_outline"-->
-<!--                android:textStyle="bold"-->
-<!--                android:padding="8dp"-->
-<!--                android:text="Sử dụng" />-->
-<!--        </RelativeLayout>-->
     </RelativeLayout>
     <LinearLayout
         android:id="@+id/layout_img"
@@ -64,7 +53,7 @@
             android:id="@+id/img_coupon"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/img_4"
+            android:src="@drawable/loading_img"
             android:scaleType="centerCrop"/>
     </LinearLayout>
 
